--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <section class="photos section">
         <div class="container">
-          <h2 class="title">Чем мы занимаемся</h2>
+          <h2 class="title photos-title">Чем мы занимаемся</h2>
           <ul class="nopoint card-set">
             <li class="card-set-item">
               <img
@@ -162,9 +162,9 @@
 
       <section class="workers section">
         <div class="container">
-          <h2 class="title">Наша команда</h2>
-          <ul class="nopoint">
-            <li class="card">
+          <h2 class="title workers-title">Наша команда</h2>
+          <ul class="nopoint card-set">
+            <li class="card card-set-item">
               <img
                 src="./images/img1.jpg"
                 alt="I. Demyanenko"
@@ -174,7 +174,7 @@
               <h3 class="title name">Игорь Демьяненко</h3>
               <p lang="en">Product Designer</p>
             </li>
-            <li class="card">
+            <li class="card card-set-item">
               <img
                 src="./images/img2.jpg"
                 alt="O. Repina"
@@ -184,7 +184,7 @@
               <h3 class="title name">Ольга Репина</h3>
               <p lang="en">Frontend Developer</p>
             </li>
-            <li class="card">
+            <li class="card card-set-item">
               <img
                 src="./images/img3.jpg"
                 alt="N. Tarasov"
@@ -194,7 +194,7 @@
               <h3 class="title name">Николай Тарасов</h3>
               <p lang="en">Marketing</p>
             </li>
-            <li class="card">
+            <li class="card card-set-item">
               <img
                 src="./images/img4.jpg"
                 alt="M. Yermakov"
@@ -217,20 +217,21 @@
 
         <address class="contact-info">
           <ul class="nopoint">
-            <li>
+            <li class="footer-item">
               <a
                 class="link contact-address"
                 href="https://goo.gl/maps/6H8zDvz9oKY9i1Rz8"
+                target="_blank"
                 rel="noopener nofollow"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="link contact-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="link contact-link" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
