add div to cards

--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="title name">Игорь Демьяненко</h3>
-              <p lang="en">Product Designer</p>
+              <div class="card-name">
+                <h3 class="title name">Игорь Демьяненко</h3>
+                <p lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="card card-set-item">
               <img
@@ -181,8 +183,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="title name">Ольга Репина</h3>
-              <p lang="en">Frontend Developer</p>
+              <div class="card-name">
+                <h3 class="title name">Ольга Репина</h3>
+                <p lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="card card-set-item">
               <img
@@ -191,8 +195,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="title name">Николай Тарасов</h3>
-              <p lang="en">Marketing</p>
+              <div class="card-name">
+                <h3 class="title name">Николай Тарасов</h3>
+                <p lang="en">Marketing</p>
+              </div>
             </li>
             <li class="card card-set-item">
               <img
@@ -201,8 +207,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="title name">Михаил Ермаков</h3>
-              <p lang="en">UI Designer</p>
+              <div class="card-name">
+                <h3 class="title name">Михаил Ермаков</h3>
+                <p lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
