--- a/portfolio.html
+++ b/portfolio.html
@@ -27,209 +27,243 @@
   <body>
     <!-- header section -->
 
-    <header>
+    <header class="header">
       <!-- LOGO of a site -->
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="link logo" href="./index.html"
+            >Web<span class="head-studio">Studio</span></a
+          >
 
-      <nav>
-        <a class="link logo" href="./index.html"
-          >Web<span class="head-studio">Studio</span></a
-        >
+          <ul class="nopoint main-nav">
+            <li class="main-nav-item">
+              <a class="link nav-link main-nav-link" href="./index.html"
+                >Студия</a
+              >
+            </li>
+            <li class="main-nav-item">
+              <a
+                class="link nav-link main-nav-link link-active"
+                href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="main-nav-item">
+              <a class="link nav-link main-nav-link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-        <ul class="nopoint main-nav">
-          <li>
-            <a class="link nav-link main-nav-link" href="./index.html"
-              >Студия</a
+        <!-- contacts at header -->
+
+        <ul class="nopoint contact-nav">
+          <li class="contact-nav-item">
+            <a class="link nav-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a
-              class="link nav-link main-nav-link link-active"
-              href="./portfolio.html"
-              >Портфолио</a
+          <li class="contact-nav-item">
+            <a class="link nav-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
             >
           </li>
-          <li><a class="link nav-link main-nav-link" href="">Контакты</a></li>
         </ul>
-      </nav>
-
-      <!-- contacts at header -->
-
-      <ul class="nopoint contact-nav">
-        <li>
-          <a class="link nav-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="link nav-link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section class="portfolio">
-        <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="nopoint">
-          <li><button class="button btn-active" type="button">Все</button></li>
-          <li>
-            <button class="button btn-passive" type="button">Веб-сайты</button>
-          </li>
-          <li>
-            <button class="button btn-passive" type="button">Приложения</button>
-          </li>
-          <li>
-            <button class="button btn-passive" type="button">Дизайн</button>
-          </li>
-          <li>
-            <button class="button btn-passive" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="nopoint">
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-1.jpg"
-                alt="сайт Технокряк"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">Технокряк</h2>
-              <p class="project-descrption">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-2.jpg"
-                alt="два баскетболиста с мячом"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">
-                Постер New Orlean vs Golden Star
-              </h2>
-              <p class="project-descrption">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-3.jpg"
-                alt="лого ресторана и рыбка"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">Ресторан Seafood</h2>
-              <p class="project-descrption">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-4.jpg"
-                alt="наушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">Проект Prime</h2>
-              <p class="project-descrption">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-5.jpg"
-                alt="коробка и кирпич"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">Проект Boxes</h2>
-              <p class="project-descrption">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-6.jpg"
-                alt="монитор с зайтом про звездное небо"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">Inspiration has no Borders</h2>
-              <p class="project-descrption">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-7.jpg"
-                alt="книга"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">Издание Limited Edition</h2>
-              <p class="project-descrption">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-8.jpg"
-                alt="бирка с лого"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">Проект LAB</h2>
-              <p class="project-descrption">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/img-9.jpg"
-                alt="человек работает с нетбуком"
-                width="370"
-                height="294"
-              />
-              <h2 class="title project-name">Growing Business</h2>
-              <p class="project-descrption">Приложение</p>
-            </a>
-          </li>
-        </ul>
+      <section class="portfolio section">
+        <div class="container">
+          <h1 class="visually-hidden">Портфолио</h1>
+          <ul class="nopoint filter-btn-list">
+            <li class="filter-btn">
+              <button class="button btn-active" type="button">Все</button>
+            </li>
+            <li class="filter-btn">
+              <button class="button btn-passive" type="button">
+                Веб-сайты
+              </button>
+            </li>
+            <li class="filter-btn">
+              <button class="button btn-passive" type="button">
+                Приложения
+              </button>
+            </li>
+            <li class="filter-btn">
+              <button class="button btn-passive" type="button">Дизайн</button>
+            </li>
+            <li class="filter-btn">
+              <button class="button btn-passive" type="button">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+          <ul class="nopoint card-set">
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-1.jpg"
+                  alt="сайт Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">Технокряк</h2>
+                  <p class="project-descrption">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-2.jpg"
+                  alt="два баскетболиста с мячом"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="project-descrption">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-3.jpg"
+                  alt="лого ресторана и рыбка"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">Ресторан Seafood</h2>
+                  <p class="project-descrption">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-4.jpg"
+                  alt="наушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">Проект Prime</h2>
+                  <p class="project-descrption">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-5.jpg"
+                  alt="коробка и кирпич"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">Проект Boxes</h2>
+                  <p class="project-descrption">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-6.jpg"
+                  alt="монитор с зайтом про звездное небо"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">Inspiration has no Borders</h2>
+                  <p class="project-descrption">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-7.jpg"
+                  alt="книга"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">Издание Limited Edition</h2>
+                  <p class="project-descrption">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-8.jpg"
+                  alt="бирка с лого"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">Проект LAB</h2>
+                  <p class="project-descrption">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/img-9.jpg"
+                  alt="человек работает с нетбуком"
+                  width="370"
+                  height="294"
+                />
+                <div class="ptf-card">
+                  <h2 class="title project-name">Growing Business</h2>
+                  <p class="project-descrption">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- footer section -->
 
     <footer class="footer">
-      <a class="link logo" href="./index.html"
-        >Web<span class="bottom-studio">Studio</span></a
-      >
+      <div class="container">
+        <a class="link logo" href="./index.html"
+          >Web<span class="bottom-studio">Studio</span></a
+        >
 
-      <address class="contact-info">
-        <ul class="nopoint">
-          <li>
-            <a
-              class="link contact-address"
-              href="https://goo.gl/maps/6H8zDvz9oKY9i1Rz8"
-              rel="noopener nofollow"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="link contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link contact-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contact-info">
+          <ul class="nopoint">
+            <li class="footer-item">
+              <a
+                class="link contact-address"
+                href="https://goo.gl/maps/6H8zDvz9oKY9i1Rz8"
+                target="_blank"
+                rel="noopener nofollow"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="link contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="link contact-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
